syntax = "proto3";

import "SegmentOutMessage.proto";

package slimtest;

message WeightInMessage {
    repeated SegmentOutMessage segmentOutMessages = 1;
    
    repeated float distancesBetween = 3;
}

